--- a/templates/batches/stu_showAllNotice.html
+++ b/templates/batches/stu_showAllNotice.html
@@ -1,6 +1,57 @@
 {% extends 'dashboard/student-dashboard.html' %}
 {% load static %}
 {% block main-content %}
+{% if appointments %}
+<div class="mt-5">
+    <div class="row layout-spacing">
+        <div class="col-lg-12 col-md-12">
+            <div class="card statbox widget box box-shadow">
+                <div class="card-header">
+                    <div class="row">
+                        <div class="col-sm-10">
+                            <h2 style="color: black;">Appointment</h2>
+                        </div>
+    
+                    </div>
+                </div>
+  
+                <div class="widget-content widget-content-area">
+                    <div class="table-responsive">
+                        <table id="htmlgrid" class="testgrid table table-striped table-bordered table-hover mb-4">
+                            <tr>
+                                <th>#</th>
+                                <th>Tutor</th>
+                                <th>Date-Time</th>
+                                <th>Duration</th>
+                                <th class="text-center">Accept/Reject</th>
+                            </tr>
+                            {% for appointment in appointments %}
+                            <tr>
+                                <td>{{forloop.counter}}</td>
+                                <td>{{appointment.tutor.user.username}}</td>
+                                <td>{{appointment.dateTime}}</td>
+                                <td>{{appointment.duration}}</td>
+                                <td class="text-center">
+                                    <a href="{% url 'acceptAppointment' appointment.pk %}" class="btn btn-info">Accept</a>
+                                    <a href="{% url 'rejectAppointment' appointment.pk %}" class="btn btn-danger">Reject</a>
+                                </td>
+                            </tr>
+                            {% endfor %}
+                        </table>
+                        {% comment %} <div class="widget-content widget-content-area text-center">
+                            <ul class="pagination pagination-style-1 justify-content-center">
+                                <li><a href="?page=">&laquo;</a></li>
+                                <li><a href="javascript:void(0);" class="active">1</a></li>
+                                <li><a href="?page=">&raquo;</a></li>
+                            </ul>
+                        </div> {% endcomment %}
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
+</div>
+{% endif %}
 <div class="mt-5">
     <div class="row layout-spacing">
         <div class="col-lg-12 col-md-12">
